Application du patch de Cyrille